# langchain_course

./: .env  agents.py  format.py  main.py  pyproject.toml  test.ipynb  visualize.py
vectorstore/4d785458-525f-4ee9-8ac1-b8b315783b81/: index_metadata.pickle
